# api/v2/oas_server_gen.go
@@ -38,6 +38,12 @@ type Handler interface {
 	//
 	// POST /import-person
 	ImportPerson(ctx context.Context, req *ImportPersonRequest) error
+	// ImportProject implements importProject operation.
+	//
+	// Import a project.
+	//
+	// POST /import-project
+	ImportProject(ctx context.Context, req *ImportProjectRequest) (ImportProjectRes, error)
 	// NewError creates *ErrorStatusCode from error returned by handler.
 	//
 	// Used for common default response.
